# aether

./: LICENSE  README.md  README.zh-CN.md  build.gradle.kts  gradle.properties  settings.gradle.kts
core/aether-log-xlog/src/main/cpp/: CMakeLists.txt  ConsoleLog.cc  Java2C_Xlog.cc  boost_exception.cc  export.exp
core/aether-log-xlog/src/main/cpp/aether/common/: autobuffer.cc  bootrun.h  compiler_util.h  mmap_util.cc  mmap_util.h  ptrbuffer.cc  scope_recursion_limit.h  string_cast.h  strutil.cc  tickcount.h  time_utils.c  time_utils.h  verinfo.h
core/aether-log-xlog/src/main/cpp/aether/log/: appender.cc  appender.h  formater.cc  log_buffer.cc  log_buffer.h  xlog_config.h  xlogger_appender.cc  xlogger_appender.h  xlogger_interface.cc  xlogger_interface.h
core/aether-log-xlog/src/main/cpp/boost/: CMakeLists.txt  any.hpp  array.hpp  assert.hpp  bind.hpp  blank.hpp  blank_fwd.hpp  concept_check.hpp  cstdint.hpp  current_function.hpp  function_equal.hpp  function_output_iterator.hpp  get_pointer.hpp  integer.hpp  integer_fwd.hpp  integer_traits.hpp  io_fwd.hpp  is_placeholder.hpp  iterator.hpp  lexical_cast.hpp  limits.hpp  math_fwd.hpp  memory_order.hpp  next_prior.hpp  non_type.hpp  none.hpp  none_t.hpp  operators.hpp  rational.hpp  static_assert.hpp  throw_exception.hpp  token_functions.hpp  token_iterator.hpp  tokenizer.hpp  type.hpp  type_index.hpp  visit_each.hpp
core/aether-log-xlog/src/main/cpp/boost/accumulators/: accumulators_fwd.hpp
core/aether-log-xlog/src/main/cpp/boost/algorithm/: all_of.hpp  any_of.hpp  copy_if.hpp  copy_n.hpp  find_if_not.hpp  iota.hpp  is_partitioned.hpp  is_permutation.hpp  is_sorted.hpp  none_of.hpp  one_of.hpp  partition_copy.hpp  partition_point.hpp
core/aether-log-xlog/src/main/cpp/boost/atomic/: atomic.hpp  atomic_flag.hpp  fences.hpp
core/aether-log-xlog/src/main/cpp/boost/bind/: arg.hpp  bind.hpp  bind_mf2_cc.hpp  bind_mf_cc.hpp  bind_template.hpp  mem_fn.hpp  placeholders.hpp  storage.hpp
core/aether-log-xlog/src/main/cpp/boost/chrono/: ceil.hpp  clock_string.hpp  config.hpp  duration.hpp  process_cpu_clocks.hpp  system_clocks.hpp  thread_clock.hpp  time_point.hpp
core/aether-log-xlog/src/main/cpp/boost/concept/: usage.hpp
core/aether-log-xlog/src/main/cpp/boost/config/: suffix.hpp
core/aether-log-xlog/src/main/cpp/boost/container/: allocator_traits.hpp  container_fwd.hpp  new_allocator.hpp  scoped_allocator.hpp  scoped_allocator_fwd.hpp  throw_exception.hpp  uses_allocator.hpp  uses_allocator_fwd.hpp  vector.hpp
core/aether-log-xlog/src/main/cpp/boost/context/: execution_context_v1.hpp  execution_context_v2.hpp  fixedsize_stack.hpp  flags.hpp  pooled_fixedsize_stack.hpp  preallocated.hpp  stack_context.hpp  stack_traits.hpp
core/aether-log-xlog/src/main/cpp/boost/core/: addressof.hpp  checked_delete.hpp  demangle.hpp  enable_if.hpp  explicit_operator_bool.hpp  ignore_unused.hpp  is_same.hpp  noncopyable.hpp  ref.hpp  scoped_enum.hpp  swap.hpp  typeinfo.hpp
core/aether-log-xlog/src/main/cpp/boost/coroutine/: asymmetric_coroutine.hpp  attributes.hpp  exceptions.hpp  flags.hpp  stack_allocator.hpp  stack_context.hpp  stack_traits.hpp  standard_stack_allocator.hpp  symmetric_coroutine.hpp
core/aether-log-xlog/src/main/cpp/boost/date_time/: adjust_functors.hpp  c_time.hpp  compiler_config.hpp  constrained_value.hpp  date.hpp  date_clock_device.hpp  date_defs.hpp  date_duration.hpp  date_duration_types.hpp  date_format_simple.hpp  date_formatting.hpp  date_formatting_limited.hpp  date_formatting_locales.hpp  date_generators.hpp  date_iterator.hpp  date_names_put.hpp  date_parsing.hpp  dst_rules.hpp  filetime_functions.hpp  gregorian_calendar.hpp  gregorian_calendar.ipp  int_adapter.hpp  iso_format.hpp  microsec_time_clock.hpp  parse_format_base.hpp  period.hpp  special_defs.hpp  time.hpp  time_clock.hpp  time_defs.hpp  time_duration.hpp  time_iterator.hpp  time_resolution_traits.hpp  time_system_counted.hpp  time_system_split.hpp  wrapping_int.hpp  year_month_day.hpp
core/aether-log-xlog/src/main/cpp/boost/detail/: basic_pointerbuf.hpp  bitmask.hpp  call_traits.hpp  indirect_traits.hpp  interlocked.hpp  iterator.hpp  lcast_precision.hpp  reference_content.hpp  sp_typeinfo.hpp  utf8_codecvt_facet.hpp
core/aether-log-xlog/src/main/cpp/boost/exception/: current_exception_cast.hpp  diagnostic_information.hpp  exception.hpp  get_error_info.hpp  info.hpp  to_string.hpp  to_string_stub.hpp
core/aether-log-xlog/src/main/cpp/boost/filesystem/: config.hpp  convenience.hpp  fstream.hpp  operations.hpp  path.hpp  path_traits.hpp  string_file.hpp
core/aether-log-xlog/src/main/cpp/boost/function/: function_base.hpp  function_fwd.hpp  function_template.hpp
core/aether-log-xlog/src/main/cpp/boost/integer/: common_factor_ct.hpp  common_factor_rt.hpp  integer_log2.hpp  integer_mask.hpp  static_log2.hpp  static_min_max.hpp
core/aether-log-xlog/src/main/cpp/boost/intrusive/: pointer_rebind.hpp  pointer_traits.hpp
core/aether-log-xlog/src/main/cpp/boost/io/: ios_state.hpp
core/aether-log-xlog/src/main/cpp/boost/iostreams/: categories.hpp  char_traits.hpp  checked_operations.hpp  close.hpp  concepts.hpp  constants.hpp  flush.hpp  imbue.hpp  input_sequence.hpp  operations_fwd.hpp  optimal_buffer_size.hpp  output_sequence.hpp  pipeline.hpp  positioning.hpp  read.hpp  seek.hpp  traits.hpp  traits_fwd.hpp  write.hpp
core/aether-log-xlog/src/main/cpp/boost/iterator/: interoperable.hpp  iterator_adaptor.hpp  iterator_categories.hpp  iterator_concepts.hpp  iterator_facade.hpp  iterator_traits.hpp  minimum_category.hpp  reverse_iterator.hpp  transform_iterator.hpp
core/aether-log-xlog/src/main/cpp/boost/lexical_cast/: bad_lexical_cast.hpp  try_lexical_convert.hpp
core/aether-log-xlog/src/main/cpp/boost/math/: common_factor_ct.hpp
core/aether-log-xlog/src/main/cpp/boost/move/: adl_move_swap.hpp  algorithm.hpp  core.hpp  default_delete.hpp  iterator.hpp  make_unique.hpp  traits.hpp  unique_ptr.hpp  utility.hpp  utility_core.hpp
core/aether-log-xlog/src/main/cpp/boost/mpl/: O1_size.hpp  O1_size_fwd.hpp  advance.hpp  always.hpp  (+80 more)
(+1621 files in other folders)
